--- a/index.html
+++ b/index.html
@@ -1,6 +1,63 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-<title>Lo que no te cuentan</title>
-<style>
-body{background:black; color:white; font-family:Georgia; margin:0; text-align:center; padding-top:150px;}
-button{padding:15px 40px; border:0; background:#111; color:#ddd; font-size:18px; cursor:pointer; border-radius:50px;}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lo que no te cuentan</title>
+    <style>
+        body {
+            background: black;
+            color: white;
+            font-family: Georgia, serif;
+            margin: 0;
+            text-align: center;
+            padding-top: 20vh;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+            opacity: 0.9;
+        }
+        p {
+            font-size: 1.4em;
+            margin-bottom: 60px;
+            opacity: 0.8;
+        }
+        button {
+            padding: 20px 70px;
+            border: 0;
+            background: #111;
+            color: #ddd;
+            font-size: 24px;
+            cursor: pointer;
+            border-radius: 50px;
+            transition: all 0.4s;
+        }
+        button:hover {
+            color: #ff3;
+            background: #222;
+            transform: scale(1.05);
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Lo que no te cuentan</h1>
+    <p>Acércate.<br>Yo ya estoy mojada de esperar.</p>
+    
+    <button onclick="sonido()">Entra si te atreves</button>
+
+    <script>
+        function sonido() {
+            let audio = new Audio('mivoz.mp3');
+            audio.play();
+        }
+    </script>
+
+</body>
+</html>
